fix: collapse without error

--- a/src/Components/Collapse/Collapse.scss
+++ b/src/Components/Collapse/Collapse.scss
@@ -19,7 +19,8 @@
     padding-top: 40px;
     height: 249px;
     border-radius: 5px;
-    p {
+    p,
+    ul {
       padding-left: 20px;
       padding-right: 20px;
       color: $color-text;
